layout: fixed live examples on mobile

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -647,6 +647,13 @@ html, body {
 }
 
 @media (max-width: $phone-width) {
+  .live-example_wrapper {
+    position: relative;
+    width: 100%;
+    float: normal;
+    clear: right;
+  }
+
   .dark-box {
     display: none;
   }
